--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ p {
     margin-bottom: 15px;
     color: #5B5D64;
 }
+.highlight-text{
+    color: rgb(255, 107, 144);
+}
 .form-control {
     margin: 10px 0px;
     padding-left: 10px;
